# p2i-tg-bot

./: .dockerignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yaml
ftobb/: main.py
ftobb/bot/: __init__.py  handlers.py
ftobb/storage/: deps.py
p2i/: config.py  main.py
p2i/bot/: __init__.py  handlers.py
p2i/storage/: deps.py  service.py
